--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+	height: 100%;
+	scroll-behavior: smooth;
+}
 
 .homepage{
     color: blue;
