--- a/bootstrap.css
+++ b/bootstrap.css
@@ -8,6 +8,7 @@ html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  scroll-behavior : smooth;
 }
 body {
   margin: 0;
